k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exposure-scanner-svc
  labels:
    app: exposure-scanner
spec:
  selector:
    app: exposure-scanner
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: NodePort
